
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef scalar_t__ UINT ;
struct TYPE_3__ {int IsTtlSupported; scalar_t__ CurrentTtl; scalar_t__ IPv6; int socket; } ;
typedef TYPE_1__ SOCK ;
typedef scalar_t__ DWORD ;


 int IPPROTO_IP ;
 int IPPROTO_IPV6 ;
 scalar_t__ IPV6_UNICAST_HOPS ;
 scalar_t__ IP_TTL ;
 int setsockopt (int ,int ,scalar_t__,char*,int) ;

bool SetTtl(SOCK *sock, UINT ttl)
{
 DWORD dw;
 int size;
 UINT opt_value = 0;

 if (sock == ((void*)0))
 {
  return 0;
 }

 if (sock->IsTtlSupported == 0)
 {
  return 0;
 }

 if (sock->CurrentTtl == ttl)
 {
  return 1;
 }

 dw = ttl;
 size = sizeof(DWORD);

 if (sock->IPv6)
 {



 }
 else
 {



 }

 if (opt_value == 0 ||
  setsockopt(sock->socket, (sock->IPv6 ? IPPROTO_IPV6 : IPPROTO_IP), opt_value, (char *)&dw, size) == 0)
 {
  return 0;
 }

 sock->CurrentTtl = ttl;

 return 1;
}
